Correct box overflow

--- a/wp-content/themes/podmld3/src/styles/components/box.less
+++ b/wp-content/themes/podmld3/src/styles/components/box.less
@@ -1,4 +1,5 @@
 .box {
 	margin-top: 20px;
 	border-radius: @radius;
+	overflow: hidden;
 }
